--- a/style.css
+++ b/style.css
@@ -1,42 +1,70 @@
+title {
+  color: black;
+  font-weight: bolder;
+  text-align: center;
+}
 body {
-  background-color: wheat;
   position: relative;
   width : 850px;
   height: 850px;
   margin: auto;
-  border: 5px black;
+  border: 1px solid black;
+  background-image: url("https://www.online-casinos.com/wp-content/uploads/2020/11/poker-hands-four-aces.jpg");
+  background-size: cover;
+
 }
-.frontA {
-  background-color: aliceblue;
-  margin : auto;
-  width : 100px;
-  height: 100px;
-  border: 5px black;
-  position: relative;
+
+button {
+  color:rgb(142, 30, 247);
+  position:absolute;
+  margin-top:25px;
 }
-.backA {
-  margin : auto;
-  background-color: aliceblue;
-  width : 100px;
-  height: 100px;
-  border: 5px black;
-  position: relative;
+.container {
+  margin-left: 100px;
+  background-color: rgba(3, 123, 131, 0.356);
+  position:absolute;
+  display:inline;
+  margin:auto;
+  width:600px;
+  height:600px;
+  text-align: center;
+  border:1px black;
 }
-.frontB {
-  margin : auto;
-  background-color: aliceblue;
-  width : 100px;
-  height: 100px;
-  border: 5px black;
-  position: relative;
+#card{
+  background-image: url("https://cdn.wallpapersafari.com/18/70/qTXgkG.jpg");
+  background-size: cover;
+  color:rgba(0, 0, 0, 0);
+  width:125px;
+  height:185px;
+  position:relative;
+  object-fit:contain;
+  transition: transform 0.8s;
+    transform-style: preserve-3d;
+  
 }
-.backB {
-  margin : auto;
-  background-color: aliceblue;
-  width : 100px;
-  height: 100px;
-  border: 5px black;
-  position: relative;
+
+#back {
+  background-image: url("https://hdclipartall.com/images/ace-card-clipart-ace-of-clubs-1773x2395.png");
+  width:125px;
+  height:170px;
+  background-size: cover;
+  position:absolute;
+}
+.card2 {
+  background-image: url("https://cdn.wallpapersafari.com/18/70/qTXgkG.jpg");
+  background-size: cover;
+  width : 125px;
+  height: 175px;
+  position: absolute;
+  margin:auto;
+  color:rgba(0, 0, 0, 0);
+
+}
+#back2 {
+  background-image: url("https://hdclipartall.com/images/ace-card-clipart-ace-of-clubs-1773x2395.png");
+  width:125px;
+  height:185px;
+  background-size: cover;
 }
 .flipCard {
   transform:rotateY(180deg);
