--- a/style.css
+++ b/style.css
@@ -32,10 +32,9 @@ button {
   background-size: cover;
   color:rgb(238, 14, 14);
   width:125px;
-  height:185px;
-  margin-top:25px ;
-  position:absolute;
+  height:175px;
   cursor:pointer;
+  position: absolute;
 }
 
 
@@ -43,8 +42,7 @@ button {
   background-image: url("https://hdclipartall.com/images/ace-card-clipart-ace-of-clubs-1773x2395.png");
   background-size: cover;
   width:125px;
-  height:185px;
-  margin-top:25px
+  height:175px;
 }
 .card2 {
   width :125px;
@@ -63,8 +61,10 @@ button {
   width:125px;
   height:175px;
 }
-.flipCard {
+
+click {
   transform:rotateY(180deg);
+  transition: tranform 0.5s;
 }
 
 .flipCard2 {
